--- a/themes/blowfish/layouts/_default/single.html
+++ b/themes/blowfish/layouts/_default/single.html
@@ -2,6 +2,7 @@
 {{ .Scratch.Set "scope" "single" }}
 
 <article>
+  <div class="container">
   {{ if .Params.showHero | default (.Site.Params.article.showHero | default false) }}
   {{ $heroStyle := .Params.heroStyle }}
   {{ if not $heroStyle }}{{ $heroStyle = .Site.Params.article.heroStyle }}{{ end }}
@@ -24,78 +25,77 @@
       {{ partial "article-meta/basic.html" (dict "context" . "scope" "single") }}
     </div>
   </header>
-  <section class="flex flex-col max-w-full mt-0 prose dark:prose-invert lg:flex-row">
-    {{ if or (and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in
-    .TableOfContents "<ul")) (.Site.Params.article.showRelatedPosts | default false) }} <div
-      class="order-first sm:max-w-prose lg:ml-auto px-0 lg:order-last lg:max-w-xs ltr:lg:pl-8 rtl:lg:pr-8">
-      <div class="toc ltr:pl-5 rtl:pr-5 print:hidden lg:sticky {{ if eq .Site.Params.header.layout " fixed" }}
-        lg:top-[140px] {{ else }} lg:top-10 {{ end }}">
+    <section class="flex flex-col max-w-full mt-0 prose dark:prose-invert lg:flex-row">
+      {{ if or (and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in
+      .TableOfContents "<ul")) (.Site.Params.article.showRelatedPosts | default false) }} <div
+        class="order-first sm:max-w-prose lg:ml-auto px-0 lg:order-last lg:max-w-xs ltr:lg:pl-8 rtl:lg:pr-8">
+        <div class="toc ltr:pl-5 rtl:pr-5 print:hidden lg:sticky {{ if eq .Site.Params.header.layout " fixed" }}
+          lg:top-[140px] {{ else }} lg:top-10 {{ end }}">
 
-        {{ if and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in
-        .TableOfContents "<ul") }} {{ partial "toc.html" . }} {{ end }} {{ if .Site.Params.article.showRelatedPosts |
-          default false }} sd {{ end }} </div>
-      </div>
-      {{ end }}
-      <div class="min-w-0 min-h-0 max-w-prose">
-        {{ partial "series.html" . }}
-        {{ .Content | emojify }}
-        </br></br>
-        {{ partial "series-closed.html" . }}
-      </div>
-     
-     <script>
-        var oid = "views_{{ .File.Path }}"
-        var oid_likes = "likes_{{ .File.Path }}"
-      </script>
-      {{ $jsPage := resources.Get "js/page.js" }}
-      {{ $jsPage = $jsPage | resources.Minify | resources.Fingerprint "sha512" }}
-      <script type="text/javascript" src="{{ $jsPage.RelPermalink }}" integrity="{{ $jsPage.Data.Integrity }}"></script>
-  
+          {{ if and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in
+          .TableOfContents "<ul") }} {{ partial "toc.html" . }} {{ end }} {{ if .Site.Params.article.showRelatedPosts |
+            default false }} sd {{ end }} </div>
+        </div>
+        {{ end }}
+        <div class="min-w-0 min-h-0 max-w-prose">
+          {{ partial "series.html" . }}
+          {{ .Content | emojify }}
+          </br></br>
+          {{ partial "series-closed.html" . }}
+        </div>
+      <script>
+          var oid = "views_{{ .File.Path }}"
+          var oid_likes = "likes_{{ .File.Path }}"
+        </script>
+        {{ $jsPage := resources.Get "js/page.js" }}
+        {{ $jsPage = $jsPage | resources.Minify | resources.Fingerprint "sha512" }}
+        <script type="text/javascript" src="{{ $jsPage.RelPermalink }}" integrity="{{ $jsPage.Data.Integrity }}"></script>   
     </section>
-  <footer class="pt-8 max-w-prose print:hidden">
+    <footer class="pt-8 max-w-prose print:hidden">
 
-    {{ partial "author.html" . }}
+      {{ partial "author.html" . }}
 
-    {{ $authorsData := .Site.Data.authors }}
-    {{ $taxonomies := .Site.Taxonomies.authors }}
-    {{ $baseURL := .Site.BaseURL }}
+      {{ $authorsData := .Site.Data.authors }}
+      {{ $taxonomies := .Site.Taxonomies.authors }}
+      {{ $baseURL := .Site.BaseURL }}
 
-    {{ if not (strings.HasSuffix $baseURL "/") }}
-    {{ $baseURL = delimit (slice $baseURL "/") "" }}
-    {{ end }}
+      {{ if not (strings.HasSuffix $baseURL "/") }}
+      {{ $baseURL = delimit (slice $baseURL "/") "" }}
+      {{ end }}
 
-    {{ range $author := .Page.Params.authors }}
-    {{ $authorData := index $authorsData $author }}
-    {{- if $authorData -}}
+      {{ range $author := .Page.Params.authors }}
+      {{ $authorData := index $authorsData $author }}
+      {{- if $authorData -}}
 
-    {{ $taxonomyLink := 0 }}
-    {{ range $taxonomyname, $taxonomy := $taxonomies }}
-    {{ if (eq $taxonomyname $author) }}
-    {{ $taxonomyLink = delimit (slice $baseURL "/authors/" $author) "" }}
-    {{ end }}
-    {{ end }}
+      {{ $taxonomyLink := 0 }}
+      {{ range $taxonomyname, $taxonomy := $taxonomies }}
+      {{ if (eq $taxonomyname $author) }}
+      {{ $taxonomyLink = delimit (slice $baseURL "/authors/" $author) "" }}
+      {{ end }}
+      {{ end }}
 
-    {{ partial "author-extra.html" (dict "context" . "data" $authorData "link" $taxonomyLink) }}
-    {{- end -}}
-    {{ end }}
+      {{ partial "author-extra.html" (dict "context" . "data" $authorData "link" $taxonomyLink) }}
+      {{- end -}}
+      {{ end }}
 
-    {{ partial "sharing-links.html" . }}
+      {{ partial "sharing-links.html" . }}
 
-    {{ partial "related.html" . }}
+      {{ partial "related.html" . }}
 
-    {{ partial "article-pagination.html" . }}
-    {{ if .Params.showComments | default (.Site.Params.article.showComments | default false) }}
-    {{ if templates.Exists "partials/comments.html" }}
-    <div class="pt-3">
-      <hr class="border-dotted border-neutral-300 dark:border-neutral-600" />
+      {{ partial "article-pagination.html" . }}
+      {{ if .Params.showComments | default (.Site.Params.article.showComments | default false) }}
+      {{ if templates.Exists "partials/comments.html" }}
       <div class="pt-3">
-        {{ partial "comments.html" . }}
+        <hr class="border-dotted border-neutral-300 dark:border-neutral-600" />
+        <div class="pt-3">
+          {{ partial "comments.html" . }}
+        </div>
       </div>
-    </div>
-    {{ else }}
-    {{ warnf "[BLOWFISH] Comments are enabled for %s but no comments partial exists." .File.Path }}
-    {{ end }}
-    {{ end }}
-  </footer>
+      {{ else }}
+      {{ warnf "[BLOWFISH] Comments are enabled for %s but no comments partial exists." .File.Path }}
+      {{ end }}
+      {{ end }}
+    </footer>
+  </div>
 </article>
 {{ end }}
